--- a/static/index.html
+++ b/static/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>HTML Full-screen iframe (100% Height and Width)</title>
+<title>Recent earthquakes in the world</title>
+<link rel="icon" type="image/x-icon" href="https://earthquake.usgs.gov/earthquakes/map/favicon.ico">
 <style>
     body{
         margin: 0; /* Remove default margin */
