--- a/static/index.html
+++ b/static/index.html
@@ -8,7 +8,7 @@
         margin: 0; /* Remove default margin */
     }
     iframe{      
-        display: block;  /* iframes are inline by default */   
+        display: block;  /* iframes are inline by default */   2
         height: 100vh;  /* Set height to 100% of the viewport height */   
         width: 100vw;  /* Set width to 100% of the viewport width */     
         border: none; /* Remove default border */
